--- a/css/styles.css
+++ b/css/styles.css
@@ -377,4 +377,89 @@ body {
 #app-container {
   max-width: 960px; }
 
+.opener {
+  background: url("../images/images/roomies-eating-together-bg.jpg") center center no-repeat;
+  background-size: cover;
+  color: white;
+  padding-bottom: 180px;
+  margin-bottom: 0; }
+  .opener .search-bar {
+    color: #C6C6C6;
+    width: 500px;
+    margin: 0 auto; }
+
+.second-string {
+  color: white;
+  padding-bottom: 100px;
+  background: url("../images/images/buildings-yellow-green.svg") center center no-repeat;
+  background-size: cover; }
+  .second-string .btn-1 {
+    color: white;
+    background-color: #35414E; }
+
+.roommate-finder {
+  padding-bottom: 90px; }
+  .roommate-finder .first-para {
+    padding-bottom: 90px; }
+  .roommate-finder h1 {
+    color: #8CC4D0; }
+  .roommate-finder .thumbnails img {
+    height: 175px; }
+  .roommate-finder .find-it {
+    padding-top: 50px; }
+
+.friends {
+  background: url("../images/images/happy-roomies-bg.jpg") center center no-repeat;
+  background: cover;
+  color: white; }
+  .friends .social-media {
+    display: inline-block;
+    margin: 0; }
+  .friends .social-media img {
+    height: 20px;
+    border-radius: 50%;
+    display: inline-block; }
+  .friends .social img {
+    display: inline-block; }
+
+.stories {
+  padding-bottom: 70px; }
+  .stories h1, .stories h3 {
+    color: #8CC4D0; }
+  .stories img {
+    width: 105px;
+    height: 110px;
+    margin: 0 auto; }
+
+.featured-rooms {
+  background-color: #F7C760; }
+  .featured-rooms .rooms {
+    position: relative;
+    margin: 50px; }
+  .featured-rooms h3 {
+    padding: 25px 0px; }
+  .featured-rooms .t-nails {
+    text-align: left; }
+  .featured-rooms .tina, .featured-rooms .buds, .featured-rooms .nicole {
+    border-radius: 50%;
+    height: 75px;
+    width: 75px;
+    position: relative;
+    border: 1px solid white;
+    transform: translate(140%, -128%); }
+  .featured-rooms .room-button {
+    background-color: #35414E;
+    color: white;
+    margin-bottom: 30px;
+    padding: 5px 15px;
+    margin-top: 5px; }
+
+.footer {
+  background-color: #35414E;
+  color: white; }
+  .footer ul, .footer li {
+    text-decoration: none;
+    display: inline-block;
+    padding: 0px 15px; }
+
 /*# sourceMappingURL=styles.css.map */
