--- a/css/styles.css
+++ b/css/styles.css
@@ -377,6 +377,49 @@ body {
 #app-container {
   max-width: 960px; }
 
+.real-navbar {
+  width: 100%;
+  position: relative;
+  display: none; }
+  @media screen and (min-width: 992px) {
+    .real-navbar {
+      display: block; } }
+  .real-navbar .navbary, .real-navbar .register {
+    display: inline-block;
+    vertical-align: top; }
+  .real-navbar .navbary {
+    width: 50%; }
+  .real-navbar .img-navy {
+    height: 50px;
+    position: absolute;
+    top: -43px;
+    left: -350px; }
+  .real-navbar .register {
+    width: 50%;
+    display: inline-block;
+    text-align: right; }
+  .real-navbar .register p {
+    vertical-align: top;
+    display: inline-block;
+    padding-left: 10px; }
+
+.nav-bar {
+  width: 100%; }
+  @media screen and (min-width: 992px) {
+    .nav-bar {
+      display: none; } }
+  .nav-bar ul, .nav-bar li {
+    display: inline-block; }
+  .nav-bar .img-1 {
+    height: 30px;
+    position: relative;
+    right: 293px;
+    top: -25px; }
+  .nav-bar .fa-bars {
+    position: relative;
+    left: 128px;
+    top: -30px; }
+
 .opener {
   background: url("../images/images/roomies-eating-together-bg.jpg") center center no-repeat;
   background-size: cover;
@@ -387,6 +430,10 @@ body {
     color: #C6C6C6;
     width: 500px;
     margin: 0 auto; }
+  .opener .fa-search {
+    background-color: #8CC4D0;
+    padding: 6px 25px;
+    color: white; }
 
 .second-string {
   color: white;
@@ -412,15 +459,17 @@ body {
   background: url("../images/images/happy-roomies-bg.jpg") center center no-repeat;
   background: cover;
   color: white; }
-  .friends .social-media {
+  .friends ul, .friends li {
     display: inline-block;
-    margin: 0; }
-  .friends .social-media img {
-    height: 20px;
-    border-radius: 50%;
-    display: inline-block; }
-  .friends .social img {
-    display: inline-block; }
+    text-decoration: none;
+    margin: 0 auto;
+    padding: 15px; }
+  .friends li {
+    border-radius: 60%;
+    background-color: #67C3D0; }
+  .friends .fa-paper-plane-o {
+    background-color: #35414E;
+    padding: 6px 25px; }
 
 .stories {
   padding-bottom: 70px; }
@@ -457,9 +506,48 @@ body {
 .footer {
   background-color: #35414E;
   color: white; }
+  @media screen and (min-width: 992px) {
+    .footer {
+      display: none; } }
   .footer ul, .footer li {
     text-decoration: none;
     display: inline-block;
     padding: 0px 15px; }
+  .footer .footer-img {
+    width: 100px;
+    margin: 0 auto;
+    padding-top: 10px; }
+  .footer .fa {
+    border: 1px solid white;
+    border-radius: 80%; }
+  .footer .social-list {
+    padding: 20px 0px;
+    border-bottom: 1px solid white; }
+
+.big-foot {
+  background-color: #35414E;
+  color: white;
+  margin: 0 auto;
+  vertical-align: top;
+  width: 100%;
+  display: none; }
+  @media screen and (min-width: 992px) {
+    .big-foot {
+      display: block; } }
+  .big-foot .left-side {
+    text-align: left;
+    border-right: 1px solid white;
+    margin: 0; }
+  .big-foot img {
+    height: 45px; }
+  .big-foot .middle {
+    margin: 0 auto;
+    border-right: 1px solid white;
+    vertical-align: top; }
+  .big-foot .list-1, .big-foot .list-2 {
+    display: inline-block;
+    vertical-align: top; }
+  .big-foot ul {
+    list-style-type: none; }
 
 /*# sourceMappingURL=styles.css.map */
