--- a/scss/main.scss
+++ b/scss/main.scss
@@ -183,6 +183,10 @@ body {
     margin: 50px;
   }
 
+  .featured-img {
+    position: relative;
+  }
+
    h3 {
      padding: 25px 0px;
    }
@@ -194,11 +198,19 @@ body {
      border-radius: 50%;
      height: 75px;
      width: 75px;
-     position: relative;
-    //  left: 63px;
-    //  bottom: 133px;
+     position: absolute;
+     transform: translate(-4%,0%);
+     right: 20px;
+     bottom: 67px;
      border: 1px solid white;
-     transform: translate(140%,-128%);
+
+   }
+
+   .fa-heart-o{
+     position: absolute;
+     top: 14px;
+     color: white;
+     right: 29px;
    }
 
    .room-button {
@@ -244,7 +256,6 @@ body {
 .big-foot {
   background-color: #35414E;
   color: white;
-  // display: inline-block;
   margin: 0 auto;
   vertical-align: top;
   width: 100%;
@@ -263,7 +274,12 @@ body {
 
     img  {
       height: 45px;
+      padding-right: 196px;
       }
+
+    .left-side p {
+      padding-top: 130px;
+    }
 
 
   .middle {
@@ -281,5 +297,25 @@ body {
       ul {
         list-style-type: none;
       }
+
+    .right-side {
+      text-align: left;
+    }
+      .footer-img {
+        width: auto;
+        height: auto;
+      }
+
+      .social-icons li {
+        display: inline-block;
+        padding: 0px 5px;
+        border-radius: 50%;
+        border: 1px solid white;
+
+        }
+        .social-icons ul {
+          text-align: left;
+          padding-left: 0;
+        }
 
     }
